--- a/src/Pages/Result/Result.css
+++ b/src/Pages/Result/Result.css
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 200px;
+  height: 500px;
   text-align: center;
+}
+
+.prize-picture {
+  width: 200px;
+  margin: 0 auto;
 }
