--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .app {
   margin: 5px;
   padding: 5px;
-  padding-bottom: 100%;
+  padding-bottom: 415px;
 }
